New CollectionUtil unionList and unionSet methods.